# TW_5G_open_linux

./: README.md
GobiSerial/: LICENSE.md  README - GobiSerial.md  README.md
GobiSerial/driver/: GobiSerial.c  Makefile
Gobi_sdk/GobiNet/: GobiNet.mod  GobiUSBNet.c  QMIDevice.c  Structs.h
Gobi_sdk/qmi-sdk-0.4/: Makefile  autogen.sh  config.status  libtool
Gobi_sdk/qmi-sdk-0.4/.svn/: entries
Gobi_sdk/qmi-sdk-0.4/autom4te.cache/: output.3  requests  traces.0  traces.1
Gobi_sdk/qmi-sdk-0.4/sources/: .Makefile.am.swp  Makefile  (+2 more)
Gobi_sdk/qmi-sdk-0.4/sources/demo/: Makefile  Makefile.am  Makefile.in  multi_wds_control.c  qmi_volte_demo.c
Gobi_sdk/qmi-sdk-0.4/sources/demo/.deps/: dial_demo-main.Po
Gobi_sdk/qmi-sdk-0.4/sources/demo/.deps/.svn/: entries
Gobi_sdk/qmi-sdk-0.4/sources/demo/.deps/.svn/text-base/: dial_demo-qmi_volte_demo.Po.svn-base
Gobi_sdk/qmi-sdk-0.4/sources/demo/.svn/: entries
Gobi_sdk/qmi-sdk-0.4/sources/demo/.svn/text-base/: Makefile.in.svn-base  Makefile.svn-base  main.c.svn-base  qmi_voice_multi_module_demo.c.svn-base  wds_only.c.svn-base
Gobi_sdk/qmi-sdk-0.5/: AUTHORS  Makefile  Makefile.am  Makefile.in  config.status  configure
Gobi_sdk/qmi-sdk-0.5/sources/utils/: Makefile  Makefile.am  Makefile.in
Gobi_sdk/qmi-sdk-0.5/sources/utils/.deps/: libqmiutils_la-qmi_idl_lib.Plo  libqmiutils_la-smem_log.Plo
Gobi_sdk/qmi-sdk-0.5/sources/utils/inc/: qmi_idl_lib_target.h
Gobi_sdk/qmi-sdk-0.5/sources/utils/src/: qmi_cci_xport_qmuxd.c  qmi_idl_accessor.c  qmi_idl_lib.c
Gobi_sdk/qmi-sdk-0.5/sources/wds/: Makefile  Makefile.am  Makefile.in
Gobi_sdk/qmi-sdk-0.5/sources/wds/.deps/: libqmiwds_la-data_common_v01.Plo  libqmiwds_la-wireless_data_service_common_v01.Plo  libqmiwds_la-wireless_data_service_v01.Plo
Gobi_sdk/tw_gobi_3apn/: GobiNet.mod  GobiUSBNet.c  QMI.c  QMI.h  QMIDevice.c  QMIDevice.h  QMIDevice.o.ur-safe  Structs.h  tags
qmi-wwan/: README - QmiWwan.md  README.md
qmi-wwan/driver/: Makefile  qmi_wwan.c
(+142 files in other folders)
